--- a/proxy-config/default.conf
+++ b/proxy-config/default.conf
@@ -9,7 +9,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name ghost.home.arpa ghost.home.arpa;
     server_tokens off;
 
